# aocleaderboard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket_sample.toml  docker-compose.yml  settings_sample.toml
src/: aoc.rs  app.rs  events.rs  leaderboard.rs  leaders.rs  main.rs  overall.rs  requests.rs  routes.rs  util.rs
templates/: base.html.tera  events.html.tera  leaderboard.html.tera  overall.tera
