[package]
name = "aocleaderboard"
version = "0.1.0"
edition = "2018"
authors = ["Sergio de Carvalho <scarvalhojr@gmail.com>"]
description = "Merge multiple Advent of Code leaderboards"
readme = "README.md"
repository = "https://github.com/scarvalhojr/aocleaderboard/"
license = "MIT"

[dependencies]
chrono = "0.4"
config = "0.10"
conv = "0.3"
env_logger = "0.8"
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["tera_templates"]